--- a/index.html
+++ b/index.html
@@ -434,6 +434,13 @@ button.remove-btn:hover:not(:disabled) {
   <option value="4">4</option>
 </select>
 
+<label for="compressionLevel">Image Quality:</label>
+<select id="compressionLevel">
+  <option value="0.9">Best (Larger File Size)</option>
+  <option value="0.7" selected>Good (Recommended)</option>
+  <option value="0.5">Standard (Smallest File Size)</option>
+</select>
+
 <div class="button-group">
   <button id="generatePDF"><span>Generate PDF & ZIP</span></button>
 </div>
@@ -685,6 +692,7 @@ generateBtn.addEventListener('click', async () => {
     const submitted = formatSubmittedby(document.getElementById('submittedBy').value.trim());
     const dateStr = document.getElementById('dateField').value;
     const perPage = parseInt(document.getElementById('imagesPerPage').value);
+    const compressionQuality = parseFloat(document.getElementById('compressionLevel').value);
 
     const pdf = new jsPDF({ orientation: 'landscape', unit: 'pt', format: 'a4' });
     const pageWidth = pdf.internal.pageSize.getWidth();
@@ -716,7 +724,7 @@ generateBtn.addEventListener('click', async () => {
         let cellWidth = (pageWidth - (perPage + 1) * spacingX) / perPage;
         let cellHeight = pageHeight - 2 * spacingY;
         for (let idx = 0; idx < chunk.length; idx++) {
-          await addImageToPDF(pdf, chunk[idx], spacingX + idx * (cellWidth + spacingX), spacingY, cellWidth, cellHeight);
+          await addImageToPDF(pdf, chunk[idx], spacingX + idx * (cellWidth + spacingX), spacingY, cellWidth, cellHeight, compressionQuality);
         }
         pdf.setFontSize(12).text(`Page ${pageNum}`, pageWidth / 2, pageHeight - 10, { align: 'center' });
         if (i + perPage < images.length) pdf.addPage();
@@ -783,8 +791,8 @@ function loadImage(src){
   });
 }
 
-async function addImageToPDF(pdf, file, x, y, width, height) {
-  const dataUrl = await fileToJpegDataURL(file, 2000, 0.7);
+async function addImageToPDF(pdf, file, x, y, width, height, quality) {
+  const dataUrl = await fileToJpegDataURL(file, 2000, quality);
   if (!dataUrl) return;
   const img = new Image();
   img.src = dataUrl;
